--- a/style index.css
+++ b/style index.css
@@ -629,7 +629,7 @@ img{
 #imagePrincipale {
 
   padding-top: 150px;
-  background: url(https://static.wikia.nocookie.net/fireforce/images/f/fd/Manga.png/revision/latest?cb=20210301205853&path-prefix=fr) no-repeat fixed 50% 50% ;
+  background: url(https://image.jeuxvideo.com/medias-md/145460/1454600999-3606-card.jpeg) no-repeat fixed 50% 50% ;
   background-size:cover ;
   height: 650px;
   filter: brightness(50%)
